# trackable-agent

./: .dockerignore  .env.example  .gcloudignore  .gitignore  Brewfile  CLAUDE.md  Dockerfile  Dockerfile.worker  README.md  pyproject.toml
.claude/: .gitignore  CLAUDE.md  settings.json
docker/: Dockerfile.ingress
docs/: .gitignore  dev_tracking.md  openapi.yaml
docs/design/: agent-flows.md
migrations/: 001_initial_schema.sql  002_add_unique_constraint.sql  003_oauth_tokens_and_revert_nullable.sql  004_merchant_aliases.sql  005_order_unique_constraint.sql  006_order_history_constraint.sql  007_merchant_policy_urls.sql  README.md
scripts/: deploy_ingress.sh  deploy_worker.sh  run_migration.py
tests/: conftest.py  test_agents.py
tests/agents/: test_chatbot.py  test_chatbot_tools.py  test_input_processor.py  test_policy_extractor.py
tests/api/: test_chat.py  test_ingest.py  test_orders.py  test_pubsub.py  test_shipments.py
tests/db/: __init__.py  test_order_repository.py
tests/integration/: test_db_integration.py  test_policy_integration.py
tests/models/: test_order_models.py
tests/subagents/: test_input_processor.py
tests/utils/: test_merchant.py  test_web_scraper.py
tests/worker/: __init__.py  test_tasks.py
trackable/: __init__.py  agent.py  config.py
trackable/agents/: __init__.py  chatbot.py  input_processor.py  policy_extractor.py
trackable/api/: __init__.py  auth.py  cloud_tasks.py  main.py
trackable/db/: __init__.py  connection.py  tables.py  unit_of_work.py
trackable/models/: __init__.py  chat.py  ingest.py  intervention.py  job.py  oauth.py  order.py  policy.py  pubsub.py  source.py  task.py  user.py
trackable/subagents/: __init__.py
trackable/utils/: __init__.py  email_filter.py  gcp.py  hash.py  logging.py  merchant.py  web_scraper.py
trackable/worker/: __init__.py  handlers.py  (+1 more)
(+37 files in other folders)
